--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "react": "^0.13.3",
     "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0",
-    "webpack": "^1.10.1",
-    "yargs": "^3.14.0"
+    "webpack": "^1.10.1"
   }
 }
